--- a/frontend/src/components/views/servicePage/service.css
+++ b/frontend/src/components/views/servicePage/service.css
@@ -1,15 +1,17 @@
+body{
+    background-color: #070F2B;
+}
+
 .page{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #070F2B;
     width: 100%;
     height: 100vh;
 }
 
 .chatbox{
-    background-color: #070F2B;
     width: 80%;
     height: 70vh;
     border: 2px solid #535C91;
@@ -54,3 +56,18 @@
     font-weight: bolder;
 }
 
+.tagList{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.tag{
+    border-radius: 15px;
+    margin: 7px 5px 7px 5px; 
+    padding: 3px 10px;
+    background-color: #9290C3;
+    border: 2px solid #535C91;
+    color: #1B1A55;
+    font-weight: bolder;
+}
