--- a/frontend/src/components/views/loginPage/login.css
+++ b/frontend/src/components/views/loginPage/login.css
@@ -3,30 +3,34 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100vh;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -70%);
+}
+
+.buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .login button {
-    border-radius: 15px;
-    margin: 3px 3px 3px; 
-    padding: 3px 10px;
+    display: flex;
+    align-items:center;
+    border-radius: 20px;
+    margin: 0px 10px; 
+    padding: 3px 15px;
     background-color: #9290C3;
     border: 2px solid #535C91;
     color: #1B1A55;
-    font-size: large;
+    font-size: 1.4rem;
     font-weight: bolder;
 }
 
 .login h1{
-    font-size: 30vh;
-    font-weight: bolder;
+    font-size: 10rem;
+    font-weight: 900;
     color: #9290C3;
-    line-height: 0.7em;
-}
-
-.login h3{
-    font-size: large;
-    font-weight: bolder;
-    color: #9290C3;
+    line-height: 5rem;
 }
