--- a/frontend/src/components/views/servicePage/infoList.css
+++ b/frontend/src/components/views/servicePage/infoList.css
@@ -57,21 +57,43 @@
 
 .playlist_head h2 {
     margin: auto;
-    font-weight: 700;
-    padding: 0px 10px
+    font-weight: 800;
+    padding: 5px 10px
+}
+
+.save_container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+    width: 100%;
 }
 
 .save{
-    padding: 0px 20px;
-    margin: 10px 0px;
-    background-color: #9290C3;
-    border: none;
-    color: #1B1A55;
-    font-weight: bolder;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border-radius: 20px;
+    background-color: #1B1A55;
+    padding: 3px;
+    margin: 20px;
 }
 
 .save:hover{
-    color: #535C91;
+    background-color: #535C91;
+}
+
+.save h3 {
+    color: #9290C3;
+    font-size: x-small;
+    font-weight: bolder;
+    margin: 3px 5px;
+}
+
+.save img{
+    width: 21px;
+    height: 21px;
+    margin: 3px 5px;
 }
 
 .playlist_content{
@@ -134,4 +156,17 @@
 
 .play:hover{
     color: #535C91;
+}
+
+.album_art {
+    align-items: center;
+}
+.song img {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 43px;
+    height: 43px;
+    margin: 3px;
 }
